# command-storage

./: .gitignore  .pre-commit-config.yaml  README.md  SECURITY.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: python-app.yml
cmds/: __init__.py  __main__.py
cmds/controller/: cmds.py  config.py
cmds/models/: constants.py
cmds/models/database/: db_models.py  json_wrapper.py
cmds/models/enums/: arguments.py  error.py
cmds/models/models/: argument.py
cmds/views/: _create_cli.py  _delete_cli.py  _read_cli.py  _update_cli.py  cli.py
command_storage/controller/: app.py  config.py
command_storage/models/: constants.py
command_storage/models/database/: db_models.py  json_wrapper.py
command_storage/models/enums/: arguments.py  error.py
command_storage/models/models/: error.py
command_storage/views/: _create_cli.py  _delete_cli.py  _read_cli.py  _update_cli.py  cli.py
snap/: snapcraft.yaml
tests/: test_cmds.py
