[tool.black]
line-length = 160
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | \.history
  | \.local
  | buck-out
  | build
  | dist
  | migrations
  | venv
)/
'''

[tool.isort]
profile = "black"
skip = ["migrations", ".env", "venv", ".local", ".history", ".vscode"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:warnings"

[tool.pytest.ini_options.markers]
integration = "marks tests as integration (deselect with '-m \"not integration\"')"

[tool.poetry]
name = "command-storage"
version = "0.1.0"
description = "A command line tool to store CLI commands for quick access and usage."
authors = ["Ashutosh <37182127+ashu-tosh-kumar@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.scripts]
cmds = "command_storage.views.cli:app"

[tool.poetry.dependencies]
python = "^3.11"
typer = { extras = ["all"], version = "^0.9.0" }
pydantic = "^2.6.3"
shellingham = "^1.5.4"
tabulate = "^0.9.0"
thefuzz = "^0.22.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
