[tool.black]
line-length = 160
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | \.history
  | \.local
  | buck-out
  | build
  | dist
  | migrations
  | venv
)/
'''

[tool.isort]
profile = "black"
skip = ["migrations", ".env", "venv", ".local", ".history", ".vscode"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:warnings"

[tool.pytest.ini_options.markers]
integration = "marks tests as integration (deselect with '-m \"not integration\"')"

[tool.poetry]
name = "command-storage"
version = "0.1.2"
description = "A command line tool to store CLI commands for quick access and usage."
authors = ["Ashutosh <37182127+ashu-tosh-kumar@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.scripts]
cmds = "command_storage.views.cli:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = "0.7.0"
pydantic = "^2.6.3"
shellingham = "1.4.0"
tabulate = "^0.9.0"
thefuzz = "^0.22.1"
pyperclip = "^1.8.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
pytest = "^8.0.2"
black = "^24.2.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
typer-cli = "^0.0.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
