[tool.black]
line-length = 160
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | \.history
  | \.local
  | buck-out
  | build
  | dist
  | migrations
  | venv
)/
'''

[tool.isort]
profile = "black"
skip = ["migrations", ".env", "venv", ".local", ".history", ".vscode"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:warnings"

[tool.pytest.ini_options.markers]
integration = "marks tests as integration (deselect with '-m \"not integration\"')"

[tool.poetry]
name = "command-storage"
version = "0.1.3"
description = "A command line tool to store CLI commands for quick access and usage."
authors = ["Ashutosh <37182127+ashu-tosh-kumar@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.scripts]
cmds = "command_storage.views.cli:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.12.0"
pydantic = "^2.6.4"
shellingham = "^1.5.4"
tabulate = "^0.9.0"
thefuzz = "^0.22.1"
pyperclip = "^1.8.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
pytest = "^8.1.1"
black = "^24.3.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
typer-cli = "^0.12.0"
coverage = "^7.6.10"
twine = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
